crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3027_use_apt_get_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 532
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3027",
    "help": null,
    "labels": [],
    "message": "use apt-get or apt-cache instead of apt in Docker builds",
    "path": "",
    "primary_span": {
      "end_byte": 35,
      "end_column": 21,
      "end_line": 2,
      "start_byte": 15,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "warning"
  },
  {
    "code": "RDL3027",
    "help": null,
    "labels": [],
    "message": "use apt-get or apt-cache instead of apt in Docker builds",
    "path": "",
    "primary_span": {
      "end_byte": 138,
      "end_column": 26,
      "end_line": 6,
      "start_byte": 113,
      "start_column": 1,
      "start_line": 6
    },
    "severity": "warning"
  }
]
