crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3028_pin_gem_versions_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3028",
    "help": null,
    "labels": [],
    "message": "pin versions in gem install",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 2,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "warning"
  },
  {
    "code": "RDL3028",
    "help": null,
    "labels": [],
    "message": "pin versions in gem install",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 4,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "warning"
  },
  {
    "code": "RDL3028",
    "help": null,
    "labels": [],
    "message": "pin versions in gem install",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 9,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 9
    },
    "severity": "warning"
  }
]
