crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3029_no_from_platform_flag_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
assertion_line: 564
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3029",
    "help": null,
    "labels": [],
    "message": "avoid `--platform` in FROM; prefer build-time platform selection",
    "path": "",
    "primary_span": {
      "end_byte": 73,
      "end_column": 49,
      "end_line": 2,
      "start_byte": 25,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "warning"
  },
  {
    "code": "RDL3029",
    "help": null,
    "labels": [],
    "message": "avoid `--platform` in FROM; prefer build-time platform selection",
    "path": "",
    "primary_span": {
      "end_byte": 125,
      "end_column": 52,
      "end_line": 3,
      "start_byte": 74,
      "start_column": 1,
      "start_line": 3
    },
    "severity": "warning"
  }
]
