crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3030_yum_install_assume_yes_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3030",
    "help": null,
    "labels": [],
    "message": "use `yum install -y` to avoid interactive prompts",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 2,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "warning"
  },
  {
    "code": "RDL3030",
    "help": null,
    "labels": [],
    "message": "use `yum install -y` to avoid interactive prompts",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 8,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 8
    },
    "severity": "warning"
  }
]
