crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3032_yum_clean_all_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3032",
    "help": null,
    "labels": [],
    "message": "clean yum metadata with `yum clean all` in the same RUN layer",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 2,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "info"
  },
  {
    "code": "RDL3032",
    "help": null,
    "labels": [],
    "message": "clean yum metadata with `yum clean all` in the same RUN layer",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 7,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 7
    },
    "severity": "info"
  }
]
