crates/rudolint-rules/tests/snapshots/rule_fixtures__rdl3036_zypper_clean_fixture.snap
---
source: crates/rudolint-rules/tests/rule_fixtures.rs
expression: "serde_json::to_value(&findings).expect(\"findings should serialize\")"
---
[
  {
    "code": "RDL3036",
    "help": null,
    "labels": [],
    "message": "clean zypper metadata with `zypper clean` in the same RUN layer",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 2,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 2
    },
    "severity": "warning"
  },
  {
    "code": "RDL3036",
    "help": null,
    "labels": [],
    "message": "clean zypper metadata with `zypper clean` in the same RUN layer",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 4,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 4
    },
    "severity": "warning"
  },
  {
    "code": "RDL3036",
    "help": null,
    "labels": [],
    "message": "clean zypper metadata with `zypper clean` in the same RUN layer",
    "path": "",
    "primary_span": {
      "end_byte": 0,
      "end_column": 1,
      "end_line": 8,
      "start_byte": 0,
      "start_column": 1,
      "start_line": 8
    },
    "severity": "warning"
  }
]
